tests/machine/x/clj/outer_join.error
exit status 1
Syntax error reading source at (/workspace/mochi/tests/machine/x/clj/outer_join.clj:130:1).
EOF while reading, starting at line 3

Full report at:
/tmp/clojure-13915048741040374524.edn
